--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,9 @@ html {
     scroll-behavior: smooth;
 }
 
-*, ::after, ::before {
+*,
+ ::after,
+ ::before {
     box-sizing: inherit;
 }
 
@@ -12,17 +14,16 @@ html {
     font-size: 17px;
     line-height: 1.2;
     background-color: #efecec;
-    margin: auto;
     text-align: center;
-    max-width: 1000px;
     padding: 15px;
+    max-width: 1000px;
+    margin: auto;
 }
 
 .body--dark {
     color: white;
     background-color: #363434;
 }
-
 
 .header {
     background-color: #62929a;
@@ -87,7 +88,7 @@ html {
 }
 
 .section__link:hover {
-        background-color: #5c5757;
+    background-color: #5c5757;
     color: white;
 }
 
